--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,7 @@ classoption: [
 papersize: a4
 bibliography: [bib/book.bib, bib/packages.bib, bib/PhD.bib]
 biblio-style: unsrtnat
+csl: cell.csl
 link-citations: yes
 github-repo: ibn-salem/thesis
 description: "This is a draft PhD thesis."
@@ -30,73 +31,6 @@ description: "This is a draft PhD thesis."
 # Set global options to not show code chunks
 knitr::opts_chunk$set(echo = FALSE)
 ```
-# Preface Stuff {-}
 
-## Prerequisites {-} 
-
-This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
-
-For now, you have to install the development versions of **bookdown** from Github:
-
-```{r eval=FALSE}
-devtools::install_github("rstudio/bookdown")
-```
-
-Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
-
-To compile this example to PDF, you need to install XeLaTeX.
-
-```{r include=FALSE}
-# automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
-```
-
-Here, I type thinks to see, if spell check works?. Noo, it does not.
-Ok, how is it here?
-Noop.
-here
-
-## My bookown testing area {-}
-
-A test to include a .png impage as figure in bookdown.
-```{r loop-example, fig.cap='The caption of my super nice PNG figure', out.width='70%', fig.align='center'}
-knitr::include_graphics("figures/testing/chromloop_pred_v01_edited.png")
-```
-I can reference this figure her (see \@ref(fig:loop-example)).
-Great, now I installed a plugin to automatically add citations. Like this one [@Oti2016]. 
-
-
-Example formular inline: $f(k) = {n \choose k} p^{k} (1-p)^{n-k}$
-And an example to reference a figure:  Fig. \[fig:loop-example\]A
-And an example to reference a figure:  Fig. \@ref(fig:loop-example)A
-I can reference this figure her (see \@ref(fig:loop-example)).
-
-
-## Introduction from book-down demo {-}
-
-You can label chapter and section titles using `{#label}` after them, e.g., we can reference Chapter \@ref(intro). If you do not manually label them, there will be automatic labels anyway, e.g., Chapter \@ref(methods).
-
-
-
-
-Figures and tables with captions will be placed in `figure` and `table` environments, respectively.
-
-```{r nice-fig, fig.cap='Here is a nice figure!', out.width='90%', fig.asp=.75, fig.align='center'}
-par(mar = c(4, 4, .1, .1))
-plot(pressure, type = 'b', pch = 2)
-
-```
-
-Reference a figure by its code chunk label with the `fig:` prefix, e.g., see Figure \@ref(fig:nice-fig). Similarly, you can reference tables generated from `knitr::kable()`, e.g., see Table \@ref(tab:nice-tab).
-
-```{r nice-tab, tidy=FALSE}
-knitr::kable(
-  head(iris, 20), caption = 'Here is a nice table!',
-  booktabs = TRUE
-)
-```
-
-You can write citations, too. For example, we are using the **bookdown** package [@R-bookdown] in this sample book, which was built on top of R Markdown and **knitr** [@xie2015].
+# Preface {-}
 
