--- a/03-TAD_evolution.Rmd
+++ b/03-TAD_evolution.Rmd
@@ -118,7 +118,7 @@ evolutionary rearrangements by using whole-genome alignment data from
 the UCSC Genome Browser [@Kent2003; @Kent2002] to compare the human genome to 12
 other species. These species where selected to have genome assemblies of
 good quality and to span several hundred million years of evolution.
-They range from chimpanzee to zebrafish (Figure 1). The whole-genome
+They range from chimpanzee to zebrafish (Fig \@ref(fig:TadEvo1)). The whole-genome
 data consists of consecutive alignment blocks that are chained and
 hierarchically ordered into so-called net files as fills [@Kent2003]. To
 overcome alignment artifacts and smaller local variations between
@@ -153,18 +153,18 @@ with estimated divergence times according to
 <!-- ======================================================= -->
 
 First, we analyzed the number and size distributions of top-level and
-non-syntenic fills between human and other species (Fig. 1). As
+non-syntenic fills between human and other species (Fig \@ref(fig:TadEvo1)). As
 expected, closely related species such as chimpanzee and gorilla have in
 general fewer fills but larger fill sizes (mean length ≥1 kb), whereas
 species which are more distant to human, such as chicken and zebrafish,
-tend to have more but smaller fills (mean length ≤ 1 kb, Fig. 1A,B).
+tend to have more but smaller fills (mean length ≤ 1 kb, Fig \@ref(fig:TadEvo1)A,B).
 However, we also observe many small non-syntenic fills in closely
 related species, likely arising from transposon insertions [@Mills2006]. As a
 consequence of the number of fills and size distributions, we identify
 different breakpoint numbers depending on species and size threshold
 applied. For example, the whole-genome alignment between human and mouse
 results in 2182, 655, and 302 rearrangement breakpoints for size
-thresholds, 10 kb, 100 kb, and 1000 kb, respectively (Fig. 1C).
+thresholds, 10 kb, 100 kb, and 1000 kb, respectively (Fig \@ref(fig:TadEvo1)C).
 Together, the number and size distributions of syntenic regions reflect
 the evolutionary divergence time from human and allow us to identify
 thousands of evolutionary rearrangement breakpoints for enrichment
@@ -214,7 +214,7 @@ different size thresholds between human and mouse at hESC TADs (Fig.
 and depleted within TAD regions. Notably, this enrichment is observed
 for all size thresholds applied in the identification of rearrangement
 breakpoints. Next, we also analyzed the breakpoints from chimpanzee,
-cattle, opossum, and zebrafish (Fig. 2B) at the 10 kb size threshold.
+cattle, opossum, and zebrafish (Fig \@ref(fig:TadEvo2)B) at the 10 kb size threshold.
 Interestingly, we observed for all species a clear enrichment of
 breakpoints at TAD boundaries and depletion within TAD regions. To
 quantify this enrichment, we simulated an expected background
@@ -223,14 +223,14 @@ random position of the respective chromosome. We than calculated the
 fraction of observed and expected breakpoints that are closer than 40 kb
 to a TAD boundary. For all size thresholds and analyzed species, we
 computed the log-fold-ratio of actual breakpoints over random
-breakpoints at domain boundaries (Fig. 2C). For virtually all species
+breakpoints at domain boundaries (Fig \@ref(fig:TadEvo2)C). For virtually all species
 and size thresholds analyzed, we found breakpoints significantly
-enriched at boundaries of TADs and contact domains (Fig. 2C, S1).
+enriched at boundaries of TADs and contact domains (Fig \@ref(fig:TadEvo2)C, \@ref(fig:TadEvoS1)).
 Depletion was only observed for some combinations of species and size
-thresholds which have only very few breakpoints (see Fig. 1C).
+thresholds which have only very few breakpoints (see Fig \@ref(fig:TadEvo1)C).
 Furthermore, we compared the distance of each breakpoint to the closest
 TAD boundary and observed nearly always significantly shorter distances
-for actual breakpoints compared to random controls (Fig. S2). Overall,
+for actual breakpoints compared to random controls (Fig \@ref(fig:TadEvoS2)). Overall,
 the enrichment was stronger for TADs in hESC compared to the contact
 domains in GM12878. However, these differences were likely due to
 different sizes of TADs and contact domains and the nested structure of
@@ -256,7 +256,7 @@ human and *Drosophila* genomes [@Harmston2017]. Therefore, we asked whether
 evolutionary breakpoints are also enriched at boundaries of GRBs. This
 would support the idea of a conserved regulatory environment around
 important developmental genes. Indeed we saw a strong enrichment around
-GRBs (Fig. 3A). This is consistent with previous studies in *Drosophila*
+GRBs (Fig \@ref(fig:TadEvo3)A). This is consistent with previous studies in *Drosophila*
 and Fish where CNE arrays often correspond to syntenic blocks [@Engstrom2007; @Dimitrieva2013].
 
 <!-- ======================================================= -->
@@ -275,7 +275,7 @@ Next, we subdivided TADs according to their overlap with GRBs in
 GRB-TADs (&gt; 80% overlap) and non-GRB-TADs (&lt; 20% overlap) as in
 the original study [@Harmston2017]. As expected, we observed a higher
 accumulation of breakpoints at boundaries and stronger depletion within
-TADs for GRB-TADs compared to non-GRB-TADs (Fig. 3B). However, also the
+TADs for GRB-TADs compared to non-GRB-TADs (Fig \@ref(fig:TadEvo3)B). However, also the
 non-GRB-TADs, that have less than 20% overlap with GRBs, are enriched
 for rearrangements at TAD boundaries. This indicates that not only TADs
 overlapping GRBs are evolutionary conserved. In summary, we show that
@@ -310,7 +310,7 @@ expression between species.
 
 To test this, we analyzed the conservation of gene expression of
 ortholog genes between human and mouse across 19 matched tissues from
-the FANTOM5 project (Table. S1) [@Forrest2014]. If a human gene and its mouse
+the FANTOM5 project ([Table S1](#TadEvoSupTab)) [@Forrest2014]. If a human gene and its mouse
 ortholog have high correlation across matching tissues, they are likely
 to have the same regulation and eventually similar functions.
 Conversely, low correlation of expression across tissues can indicate
@@ -319,13 +319,13 @@ regulation.
 
 First, we separated human genes according to their location within TADs
 or outside of TADs. From 12,696 human genes with expression data and a
-unique one-to-one ortholog in mouse (Table S2), 1,525 have a
+unique one-to-one ortholog in mouse ([Table S2](#TadEvoSupTab)), 1,525 have a
 transcription start site (TSS) located outside hESC TADs and 11,171
 within. Next, we computed for each gene its expression correlation with
 mouse orthologs across 19 matching tissues. Genes within TADs have
 significantly higher expression correlation with their mouse ortholog
 (median R = 0,340) compared to genes outside TADs (mean R = 0,308, p =
-0.0015, Fig. 4A). This indicates higher conservation of gene regulation
+0.0015, Fig \@ref(fig:TadEvo4)A). This indicates higher conservation of gene regulation
 in TADs and is consistent with the observation of housekeeping genes at
 TAD boundaries [@Dixon2012] and the role of TADs in providing conserved
 regulatory environments for gene regulation [@Harmston2017; @Ibn-Salem2017].
@@ -362,11 +362,11 @@ could be assigned to a one-to-one ortholog in mouse and are contained in
 the expression data set. The expression correlation with mouse orthologs
 were significantly higher for genes in conserved TADs (median R = 0.316)
 compared to genes in rearranged TADs (median R = 0.237, p = 0.0013)
-(Fig. 4B). This shows that disruptions of TADs by evolutionary
+(Fig \@ref(fig:TadEvo4)B). This shows that disruptions of TADs by evolutionary
 rearrangements are associated with less conserved gene expression
 profiles across tissues. Although not significant, we also observed a
 slightly higher expression correlation for 1,003 genes in GRB-TADs
-compared to 8,038 genes in non-GRB TADs (Fig. 4C, p = 0.13).
+compared to 8,038 genes in non-GRB TADs (Fig \@ref(fig:TadEvo4)C, p = 0.13).
 
 In summary, we observed higher expression correlation between orthologs\
 for human genes inside TADs than outside. Moreover, we saw that genes in
@@ -648,7 +648,7 @@ The source code of all analysis is available on GitHub:
 [*https://github.com/Juppen/TAD-Evolution*](https://github.com/Juppen/TAD-Evolution).
 All the genomic data used for analyses are freely available to be
 downloaded from the UCSC Genome Browser and EBI Expression Atlas with
-identifiers listed in Table 1 and S1.
+identifiers listed in Table 1 and [Table S1](#TadEvoSupTab).
 
 ### Competing interests
 
