--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -140,9 +140,7 @@ Percent of close paralogs (red) and sampled (grey) gene pairs in the same IMR90 
 
 # Supplementary Data: Evolutionary stability of topologically associating domains is associated with conserved gene regulation
 
-## Supplementary Tables
-
-
+## Supplementary Tables {#TadEvoSupTab}
 
 **Table S1** **Matching tissues and samples with CAGE expression data in human and
 mouse.**
