--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -97,7 +97,7 @@ However, future combination of imaging-based techniques with proximity-ligation 
 ### Proximity-ligation based method to quantify chromatin interactions
 
 The frequency of interactions between different loci in the genome can be experimentally
-measured by proximity ligation techniques [@Sati2017]. These protocols are variations of the chromosome conformation capture (3C) experiment [@Dekker2002]. 3C works by the ability to 
+measured by proximity ligation techniques [@Sati2017; @Schmitt2016]. These protocols are variations of the chromosome conformation capture (3C) experiment [@Dekker2002]. 3C works by the ability to 
 crosslink two genomic loci that are in close physical proximity in the nuclear
 space by treating cells with formaldehyde. 
 The crosslinked chromatin is than digested by enzymes to fragment the 
@@ -148,6 +148,47 @@ While the first Hi-C study produced genome-wide interactions at 1Mb resolution [
 - (Loop extrusion model)
 - Nucleosomes / 10nm / 30nm fibers
 
+<!-- ---------------------------------------------------------------- -->
+```{r GenomeHierarchy, fig.cap='(ref:GenomeHierarchy)', out.width='80%', fig.align='center'}
+knitr::include_graphics("figures/Bonev2016Fig2.png")
+```
+(ref:GenomeHierarchy) **Hierarchical organization of chromatin three-dimensional chromatin architecture** 
+**(A)**  
+Figure source [@Bonev2016] [https://www.nature.com/articles/nrg.2016.112/figures/2](https://www.nature.com/articles/nrg.2016.112/figures/2).
+<!-- ---------------------------------------------------------------- -->
+
+### Chromosomal territories and inter-chromosomal contacts
+The eukaryotic genome is highly organized in the interpahse nucelus. 
+Chromosomes occupy distinct spatial regions, called chromosome territories, and 
+intermingle less than one would expect by chance [@Cremer2001]. This was first observed 
+using imaging based approaches, and is reflected in Hi-C interaction maps, where inter-chromosomal contacts occur order of magnitudes less frequent than intra-chromosomal contacts [@Lieberman-Aiden2009].
+However, despite this spatial segregation of chromosome, intermingling of chromosome occurs and is associated with chromosomal translocations [@Branco2006, @Roukos2013, @Roukos2014].
+There are also specific gene regulatory interactions between different chromosomes [@DeLaat2007], for example olfactory receptor genes cluster densely in the nucleus of olfactory neurons to facilitate monoallelic expression of a single receptor gene per cell [@Monahan2015].
+While there are specific inter-chromosomal contacts, the genome is non-randomly organized in chromosomes which occupy distinct territories in the spacial nucleus.  
+
+### A/B compartments
+The ability to measure genome-wide chromatin contacts using Hi-C, 
+revealed that individual regions on chromosomes segregate by preferential interactions 
+into two compartments mayor clusters, rerferred to as A/B-compartments [@Lieberman-Aiden2009].
+Interestingly, regions A-compartments are associated with active histone-modifications and
+active transcription, whereas B-compartment is associated with heterochromatin, lamina association, and repressed genes. 
+
+
+<!--  further organized in mega-base scale -->
+<!-- A/B-compartments that show specific preferential interaction patterns -->
+<!-- and transcriptional activity [@Lieberman-Aiden2009; @Rao2014]. -->
+
+### Topologically associating domains (TADs)
+
+
+### Chromatin loops
+
+
+In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
+These engage in dynamic long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the fromation of TADs.
+TADs in tern cluster by their epigenomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonnev2016]. 
+
+
 ## Changes of genome folding in evoltuion and disease genomes
 - Evolution of chromatin architecture
 - Disruption of chromatin architecture
@@ -161,24 +202,24 @@ functional building blocks, in which genes regulation is coordinated.
 
 
 ### Is the three-dimensonal folding of genomes associated with co-regulation of functionally related genes?  {-}
-- How are duplicated genes during evolution distributed in the three-dimensonal gneome architecture? 
-- Can TADs provide regulatory envirnoment for co-regulation of duplicated genes?
+- How are duplicated genes during evolution distributed in the three-dimensional genome architecture? 
+- Can TADs provide regulatory environment for co-regulation of duplicated genes?
 - (Are TADs functional genomic units in which genes are co-regulated?)
 - (Are paralog genes co-regulated in the 3D chromatin architecture of genomes?)
 
 ### Are TADs functional buidling blocks of genomes and subjected to selective preasure during evolution? {-}
-- Are TADs conserved during evolution or disrupted by rearragements?
+- Are TADs conserved during evolution or disrupted by rearrangements?
 - Are changes of TADs during evolution associated with changes in gene expression profiles?
 - (Are TADs stable units that are often transmitted as a whole than disrupted by rearrangements?)
 
 ### Is the disruption of TADs by rearrangements also associated to genetic diseases?  {-}
-- Can TADs be used to interpred position effects of rearrangments in genetic diseases?
+- Can TADs be used to interpret position effects of rearrangements in genetic diseases?
 - Can chromatin interaction data and TADs be integrated with phenotype data to predict pathomechanism of balanced chromosomal rearrangements?
 
 ### Can chromatin looping interactions be predicted by ChIP-seq and sequence features?  {-}
-- Are ther signals form TF ChIP-seq data at chromtin looping anchors that predict long-range contacts?
-- Does the gnomic sequnce encode features that are predicive for chromatin looping interacionts?
-- Can we provide a computational method to predict chromatin looping interactions in specifc cell-types and conditions of interest?
+- Are there signals form TF ChIP-seq data at chromatin looping anchors that predict long-range contacts?
+- Does the gnomic sequence encode features that are predictive for chromatin looping interactions?
+- Can we provide a computational method to predict chromatin looping interactions in specific cell-types and conditions of interest?
 
 ## Structure of this thesis
 
