--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -169,7 +169,7 @@ While there are specific inter-chromosomal contacts, the genome is non-randomly 
 ### A/B compartments
 The ability to measure genome-wide chromatin contacts using Hi-C, 
 revealed that individual regions on chromosomes segregate by preferential interactions 
-into two compartments mayor clusters, rerferred to as A/B-compartments [@Lieberman-Aiden2009].
+into two compartments mayor clusters, referred to as A/B-compartments [@Lieberman-Aiden2009].
 Interestingly, regions A-compartments are associated with active histone-modifications and
 active transcription, whereas B-compartment is associated with heterochromatin, lamina association, and repressed genes. 
 
@@ -180,18 +180,61 @@ active transcription, whereas B-compartment is associated with heterochromatin, 
 
 ### Topologically associating domains (TADs)
 
+Compartments could be identified by clustering of long-range interactions in Hi-C maps
+with bin resolution of 1 Mb. In 2012 higher resolution Hi-C maps of up to 40 kb lead to the identification of genomic regions with preferential interactions wiht them. 
+These genomic regions were termed topologically associating domains (TADs) [@Dixon2012; @Nora2012; @Sexton2012]. They are opperationlly defined as genomic regions with frequent interactions of loci within the domain and decreased interactions across domain boundares [@Nora2016]. 
+
+TADs can be identified from Hi-C interaction maps computationally by different algorithms [@Ay2015]. The directionality index is a score for each bin in the Hi-C matrix that quantifies the
+number of upstream versus downstream interactions of this bin. Using hidden Markov models TAD boundaries where than identified in regions where DI is changing drastically [@Dixon2012]. 
+Other algorithms compute an insulation score as the extent to which interactions to cross potential TAD boundaries [@Crane2015].
+Later the Arrowhead algorithm was introduced to find "contact domains" as smaller nested structures along the diagonal of high resolution Hi-C matrices [@Rao2014].
+Furthermore, when analyzing Hi-C interactions at differnt length scales, hierarchies of TADs and sub-TADs could be identifed that overlap each other [@Filippova2014, @Fraser2015].  
+The different algorithms and parameters used in each is only one source of variation 
+in reliably identifying TADs. Also the resolution of Hi-C maps, which is mainly defined by
+sequencing depths but also the Hi-C protocol itself [@Rao2015], as well as different 
+normalization strategies for Hi-C contacts introduce variability [@Forcato2017]. 
+Therefore the number and size of TADs varies between different studies and cannot be directly compared. 
+
+The first studies on TADs identifed around 3000 TADs in human and mouse genomes with a median size of ~800 kb [@Dixon2012] and ~100 kb in *Drosophila* gneomes [@Sexton2012].
+Analysis of 1kb or 5kb resolution Hi-C matrixes resulted in nested "contact domains" 
+with median size of 185 kb (range 40 kb - 3 Mb) in human and mouse cells [@Rao2014].
+
+Importantly, TADs might be equivalent to "chromatin domains" of 10 kb - 1 Mb in size detected by microscopy approaches [@Cremer2010; @Gibcus2013]. Annother connection of Hi-C derived 
+interaction maps with previous microscopy observations, is that TADs in *Drosophila* correspond to bands of polytene chromosomes [@Eagen2015].
+
+The spatial positioning of TADs correlate with many genomic features measured along the
+linear genome [@Merkenschlager2016]. 
+TAD boudnaries are enriched for binding of "insulator protins", such as CTCF in mammals and CP190 in Drosophila [@Dixon2012; @Sexton2012]. Furthermore, TAD boundares are associated 
+with active chromatin, such as H3K4me3 and H3K27me3, DNase I hypersensivity, actie transcription, 
+and house-keeping genes [@Dixon2012].
+Furthermore, TADs correspond to regions of early and late replication timing [@Pope2014; @Dileep2015] and lamina associated domains (LADs) [@Dixon2012].
+Importantly, enhancer-promoter interactions seems to be mostly constrained within TADs [@Shen2012]
+
+There is acumulating evidence, that TADs are fundamental units of chromosome organization [@Dixon2016]
+
+
+- [X] Definition, number, and size
+- [X] Algorithms to identify TADs
+- Functional features
+  - [X] CTCF binding at boundaries
+  - [X] housekeeping genes at boundaries
+  - enhancer-gene associations within TADs
 
 ### Chromatin loops
 
-
 In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
-These engage in dynamic long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the fromation of TADs.
+These engage in dynamic long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the formation of TADs.
 TADs in tern cluster by their epigenomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonnev2016]. 
 
+
+## Dynamics of chromatin structure
+- Cell-type invariant TADs  
+- Conservation of TADs
 
 ## Changes of genome folding in evoltuion and disease genomes
 - Evolution of chromatin architecture
 - Disruption of chromatin architecture
+
 
 
 ## Aims of this thesis
