--- a/preamble.tex
+++ b/preamble.tex
@@ -18,7 +18,7 @@
 % **************************************************
 % Information and Commands for Reuse
 % **************************************************
-\newcommand{\thesisTitle}{Genome folding and transcriptional regulation in evolution and disease}
+\newcommand{\thesisTitle}{Genome folding in evolution and disease}
 \newcommand{\thesisName}{Jonas Ibn-Salem}
 \newcommand{\thesisSubject}{Documentation}
 % \newcommand{\thesisDate}{January, 2018}
