--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -24,7 +24,7 @@
 \PassOptionsToPackage{hyphens}{url} % url is loaded by hyperref
 \usepackage[unicode=true]{hyperref}
 \hypersetup{
-            pdftitle={Genome folding and transcriptional regulation in evolution and disease},
+            pdftitle={Genome folding in evolution and disease},
             pdfauthor={Jonas Ibn-Salem},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -79,7 +79,7 @@
 % **************************************************
 % Information and Commands for Reuse
 % **************************************************
-\newcommand{\thesisTitle}{Genome folding and transcriptional regulation in evolution and disease}
+\newcommand{\thesisTitle}{Genome folding in evolution and disease}
 \newcommand{\thesisName}{Jonas Ibn-Salem}
 \newcommand{\thesisSubject}{Documentation}
 % \newcommand{\thesisDate}{January, 2018}
@@ -158,9 +158,9 @@
 % \usepackage{cell} % use cell journal style
 % \usepackage[backend=bibtex]{biblatex}
 
-\title{Genome folding and transcriptional regulation in evolution and disease}
+\title{Genome folding in evolution and disease}
 \author{Jonas Ibn-Salem}
-\date{2018-01-24}
+\date{2018-01-25}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -554,15 +554,89 @@ spacial nucleus.
 
 The ability to measure genome-wide chromatin contacts using Hi-C,
 revealed that individual regions on chromosomes segregate by
-preferential interactions into two compartments mayor clusters,
-rerferred to as A/B-compartments \citep{Lieberman-Aiden2009}.
-Interestingly, regions A-compartments are associated with active
-histone-modifications and active transcription, whereas B-compartment is
-associated with heterochromatin, lamina association, and repressed
-genes.
+preferential interactions into two compartments mayor clusters, referred
+to as A/B-compartments \citep{Lieberman-Aiden2009}. Interestingly,
+regions A-compartments are associated with active histone-modifications
+and active transcription, whereas B-compartment is associated with
+heterochromatin, lamina association, and repressed genes.
 
 \subsection{Topologically associating domains
 (TADs)}\label{topologically-associating-domains-tads}
+
+Compartments could be identified by clustering of long-range
+interactions in Hi-C maps with bin resolution of 1 Mb. In 2012 higher
+resolution Hi-C maps of up to 40 kb lead to the identification of
+genomic regions with preferential interactions wiht them. These genomic
+regions were termed topologically associating domains (TADs)
+\citep{Dixon2012, Nora2012, Sexton2012}. They are opperationlly defined
+as genomic regions with frequent interactions of loci within the domain
+and decreased interactions across domain boundares \citep{Nora2016}.
+
+TADs can be identified from Hi-C interaction maps computationally by
+different algorithms \citep{Ay2015}. The directionality index is a score
+for each bin in the Hi-C matrix that quantifies the number of upstream
+versus downstream interactions of this bin. Using hidden Markov models
+TAD boundaries where than identified in regions where DI is changing
+drastically \citep{Dixon2012}. Other algorithms compute an insulation
+score as the extent to which interactions to cross potential TAD
+boundaries \citep{Crane2015}. Later the Arrowhead algorithm was
+introduced to find ``contact domains'' as smaller nested structures
+along the diagonal of high resolution Hi-C matrices \citep{Rao2014}.
+Furthermore, when analyzing Hi-C interactions at differnt length scales,
+hierarchies of TADs and sub-TADs could be identifed that overlap each
+other \citep[\citet{Fraser2015}]{Filippova2014}.\\
+The different algorithms and parameters used in each is only one source
+of variation in reliably identifying TADs. Also the resolution of Hi-C
+maps, which is mainly defined by sequencing depths but also the Hi-C
+protocol itself \citep{Rao2015}, as well as different normalization
+strategies for Hi-C contacts introduce variability \citep{Forcato2017}.
+Therefore the number and size of TADs varies between different studies
+and cannot be directly compared.
+
+The first studies on TADs identifed around 3000 TADs in human and mouse
+genomes with a median size of \textasciitilde{}800 kb \citep{Dixon2012}
+and \textasciitilde{}100 kb in \emph{Drosophila} gneomes
+\citep{Sexton2012}. Analysis of 1kb or 5kb resolution Hi-C matrixes
+resulted in nested ``contact domains'' with median size of 185 kb (range
+40 kb - 3 Mb) in human and mouse cells \citep{Rao2014}.
+
+Importantly, TADs might be equivalent to ``chromatin domains'' of 10 kb
+- 1 Mb in size detected by microscopy approaches
+\citep{Cremer2010, Gibcus2013}. Annother connection of Hi-C derived
+interaction maps with previous microscopy observations, is that TADs in
+\emph{Drosophila} correspond to bands of polytene chromosomes
+\citep{Eagen2015}.
+
+The spatial positioning of TADs correlate with many genomic features
+measured along the linear genome \citep{Merkenschlager2016}. TAD
+boudnaries are enriched for binding of ``insulator protins'', such as
+CTCF in mammals and CP190 in Drosophila \citep{Dixon2012, Sexton2012}.
+Furthermore, TAD boundares are associated with active chromatin, such as
+H3K4me3 and H3K27me3, DNase I hypersensivity, actie transcription, and
+house-keeping genes \citep{Dixon2012}. Furthermore, TADs correspond to
+regions of early and late replication timing
+\citep{Pope2014, Dileep2015} and lamina associated domains (LADs)
+\citep{Dixon2012}. Importantly, enhancer-promoter interactions seems to
+be mostly constrained within TADs \citep{Shen2012}
+
+There is acumulating evidence, that TADs are fundamental units of
+chromosome organization \citep{Dixon2016}
+
+\begin{itemize}
+\tightlist
+\item
+  {[}X{]} Definition, number, and size
+\item
+  {[}X{]} Algorithms to identify TADs
+\item
+  Functional features
+\item
+  {[}X{]} CTCF binding at boundaries
+\item
+  {[}X{]} housekeeping genes at boundaries
+\item
+  enhancer-gene associations within TADs
+\end{itemize}
 
 \subsection{Chromatin loops}\label{chromatin-loops}
 
@@ -570,10 +644,21 @@ In summary, these findings suggest a hierarchical organization of
 chromosome architecture. First, dynamic nucleosome contacts from
 clutches and fibers. These engage in dynamic long-range chromatin loops,
 some of which are stabilized by architectural proteins, such as CTCF and
-cohesin, and lead to the fromation of TADs. TADs in tern cluster by
+cohesin, and lead to the formation of TADs. TADs in tern cluster by
 their epigenomic type into A/B compartments and coalescence of
 compartments in the same chromosome forms chromosome territories
 \citep{Bonnev2016}.
+
+\section{Dynamics of chromatin
+structure}\label{dynamics-of-chromatin-structure}
+
+\begin{itemize}
+\tightlist
+\item
+  Cell-type invariant TADs\\
+\item
+  Conservation of TADs
+\end{itemize}
 
 \section{Changes of genome folding in evoltuion and disease
 genomes}\label{changes-of-genome-folding-in-evoltuion-and-disease-genomes}
