--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -182,7 +182,7 @@ active transcription, whereas B-compartment is associated with heterochromatin, 
 
 Compartments could be identified by clustering of long-range interactions in Hi-C maps
 with bin resolution of 1 Mb. In 2012 higher resolution Hi-C maps of up to 40 kb lead to the identification of genomic regions with preferential interactions wiht them. 
-These genomic regions were termed topologically associating domains (TADs) [@Dixon2012; @Nora2012; @Sexton2012]. They are opperationlly defined as genomic regions with frequent interactions of loci within the domain and decreased interactions across domain boundares [@Nora2016]. 
+These genomic regions were termed topologically associating domains (TADs) [@Dixon2012; @Nora2012; @Sexton2012]. They are opperationlly defined as genomic regions with frequent interactions of loci within the domain and decreased interactions across domain boundares [@Merkenschlager2016]. 
 
 TADs can be identified from Hi-C interaction maps computationally by different algorithms [@Ay2015]. The directionality index is a score for each bin in the Hi-C matrix that quantifies the
 number of upstream versus downstream interactions of this bin. Using hidden Markov models TAD boundaries where than identified in regions where DI is changing drastically [@Dixon2012]. 
@@ -191,7 +191,7 @@ Later the Arrowhead algorithm was introduced to find "contact domains" as smalle
 Furthermore, when analyzing Hi-C interactions at differnt length scales, hierarchies of TADs and sub-TADs could be identifed that overlap each other [@Filippova2014, @Fraser2015].  
 The different algorithms and parameters used in each is only one source of variation 
 in reliably identifying TADs. Also the resolution of Hi-C maps, which is mainly defined by
-sequencing depths but also the Hi-C protocol itself [@Rao2015], as well as different 
+sequencing depths but also the Hi-C protocol itself [@Rao2014], as well as different 
 normalization strategies for Hi-C contacts introduce variability [@Forcato2017]. 
 Therefore the number and size of TADs varies between different studies and cannot be directly compared. 
 
@@ -224,7 +224,7 @@ There is acumulating evidence, that TADs are fundamental units of chromosome org
 
 In summary, these findings suggest a hierarchical organization of chromosome architecture. First, dynamic nucleosome contacts from clutches and fibers. 
 These engage in dynamic long-range chromatin loops, some of which are stabilized by architectural proteins, such as CTCF and cohesin, and lead to the formation of TADs.
-TADs in tern cluster by their epigenomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonnev2016]. 
+TADs in tern cluster by their epigenomic type into A/B compartments and coalescence of compartments in the same chromosome forms chromosome territories [@Bonev2016]. 
 
 
 ## Dynamics of chromatin structure
